modified the code for sending email and downloading resume pdfs

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-# Environment
+﻿# Environment
 NODE_ENV=development
 
 # Ports
@@ -41,8 +41,15 @@ CHROME_URL=ws://localhost:8080
 
 # Mail Server (for e-mails)
 # For testing, you can use https://ethereal.email/create
-MAIL_FROM=noreply@localhost
-SMTP_URL=smtp://mustkeem1310@gmail.com:zfjfbnezyfwrrmml@smtp.gmail.com:587
+# MAIL_FROM=noreply@localhost
+# SMTP_URL=smtp://mustkeem1310@gmail.com:zfjfbnezyfwrrmml@smtp.gmail.com:587
+
+
+SMPT_SERVICE=gmail
+SMPT_MAIL=aniketkhillare172002@gmail.com
+SMPT_PASSWORD=rflyuzxyuoxprgdi
+SMPT_PORT=465
+SMPT_HOST=smtp.gmail.com
 
 # Storage
 STORAGE_ENDPOINT=localhost
