made changes to open faster

--- a/.env
+++ b/.env
@@ -5,15 +5,15 @@ NODE_ENV=development
 PORT=3000
 
 # Client Port & URL (for development)
-__DEV__CLIENT_PORT=3000 # Only used in development
-__DEV__CLIENT_URL=http://localhost:3000 # Only used in development
+__DEV__CLIENT_PORT=5173 # Only used in development
+__DEV__CLIENT_URL=http://localhost:5173 # Only used in development
 
 # Artboard Port & URL (for development)
 __DEV__ARTBOARD_PORT=6173 # Only used in development
 __DEV__ARTBOARD_URL=http://localhost:6173 # Only used in development
 
 # URLs
-# These URLs must reference a publicly accessible domain or IP address, not a docker container ID (depending on your compose setup)
+# These URLs must reference a publicly accessible domain or IP address, not a docker container ID (depending on your>
 PUBLIC_URL=http://localhost:3000
 STORAGE_URL=http://localhost:9000/default # default is the bucket name specified in the STORAGE_BUCKET variable
 
@@ -45,11 +45,11 @@ CHROME_URL=ws://localhost:8080
 # SMTP_URL=smtp://mustkeem1310@gmail.com:zfjfbnezyfwrrmml@smtp.gmail.com:587
 
 
-SMPT_SERVICE=gmail
-SMPT_MAIL=aniketkhillare172002@gmail.com
-SMPT_PASSWORD=rflyuzxyuoxprgdi
-SMPT_PORT=465
-SMPT_HOST=smtp.gmail.com
+SMTP_SERVICE=gmail
+SMTP_MAIL=aniketkhillare172002@gmail.com
+SMTP_PASSWORD=rflyuzxyuoxprgdi
+SMTP_PORT=465
+SMTP_HOST=smtp.gmail.com
 
 # Storage
 STORAGE_ENDPOINT=localhost
