--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "@testing-library/react": "14.1.2",
     "@types/async-retry": "^1.4.8",
     "@types/bcryptjs": "^2.4.6",
+    "@types/compression": "^1.8.1",
     "@types/cookie-parser": "^1.4.6",
     "@types/express": "^4.17.21",
     "@types/file-saver": "^2.0.7",
@@ -182,6 +183,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "cmdk": "^0.2.0",
+    "compression": "^1.8.1",
     "cookie-parser": "^1.4.6",
     "dayjs": "^1.11.10",
     "deepmerge": "^4.3.1",
