--- a/.env
+++ b/.env
@@ -62,7 +62,7 @@ STORAGE_USE_SSL=false
 
 # Redis (for cache & server session management)
 REDIS_URL=redis://default:password@localhost:6379
-
+PUBLIC_URL=https://internvista.com
 # Sentry (for error reporting, Optional)
 # VITE_SENTRY_DSN=
 
