--- a/.env
+++ b/.env
@@ -35,9 +35,10 @@ REFRESH_TOKEN_SECRET=refresh_token_secret
 
 # Chrome Browser (for printing)
 # generated with `openssl rand -hex 32`
-CHROME_PORT=8080
-CHROME_TOKEN=chrome_token
-CHROME_URL=ws://localhost:8080
+# CHROME_PORT=8080
+# CHROME_TOKEN=chrome_token
+# CHROME_URL=ws://localhost:8080
+BROWSER_EXECUTABLE_PATH="/home/admin/.cache/puppeteer/chrome/linux-131.0.6778.204/chrome-linux64/chrome"
 
 # Mail Server (for e-mails)
 # For testing, you can use https://ethereal.email/create
