--- a/.env
+++ b/.env
@@ -14,7 +14,7 @@ __DEV__ARTBOARD_URL=http://localhost:6173 # Only used in development
 
 # URLs
 # These URLs must reference a publicly accessible domain or IP address, not a docker container ID (depending on your>
-PUBLIC_URL=http://localhost:3000
+# PUBLIC_URL=http://localhost:3000
 STORAGE_URL=http://localhost:9000/default # default is the bucket name specified in the STORAGE_BUCKET variable
 
 # Database (Prisma/PostgreSQL)
