moving to old version

--- a/.env
+++ b/.env
@@ -14,7 +14,7 @@ __DEV__ARTBOARD_URL=http://localhost:6173 # Only used in development
 
 # URLs
 # These URLs must reference a publicly accessible domain or IP address, not a docker container ID (depending on your>
-# PUBLIC_URL=http://localhost:3000
+PUBLIC_URL=http://localhost:3000
 STORAGE_URL=http://localhost:9000/default # default is the bucket name specified in the STORAGE_BUCKET variable
 
 # Database (Prisma/PostgreSQL)
@@ -35,10 +35,10 @@ REFRESH_TOKEN_SECRET=refresh_token_secret
 
 # Chrome Browser (for printing)
 # generated with `openssl rand -hex 32`
-# CHROME_PORT=8080
-# CHROME_TOKEN=chrome_token
-# CHROME_URL=ws://localhost:8080
-BROWSER_EXECUTABLE_PATH="/home/admin/.cache/puppeteer/chrome/linux-131.0.6778.204/chrome-linux64/chrome"
+CHROME_PORT=8080
+CHROME_TOKEN=chrome_token
+CHROME_URL=ws://localhost:8080
+# BROWSER_EXECUTABLE_PATH="/home/admin/.cache/puppeteer/chrome/linux-131.0.6778.204/chrome-linux64/chrome"
 
 # Mail Server (for e-mails)
 # For testing, you can use https://ethereal.email/create
@@ -63,7 +63,7 @@ STORAGE_USE_SSL=false
 
 # Redis (for cache & server session management)
 REDIS_URL=redis://default:password@localhost:6379
-PUBLIC_URL=https://internvista.com
+# PUBLIC_URL=https://internvista.com
 # Sentry (for error reporting, Optional)
 # VITE_SENTRY_DSN=
 
