--- a/libs/utils/project.json
+++ b/libs/utils/project.json
@@ -5,13 +5,11 @@
   "projectType": "library",
   "targets": {
     "build": {
-      "executor": "@nx/js:swc",
-      "outputs": ["{options.outputPath}"],
+      "executor": "nx:run-commands",
+      "outputs": ["{workspaceRoot}/dist/libs/utils"],
       "options": {
-        "outputPath": "dist/libs/utils",
-        "main": "libs/utils/src/index.ts",
-        "tsConfig": "libs/utils/tsconfig.lib.json",
-        "assets": ["libs/utils/*.md"]
+        "command": "pnpm exec swc libs/utils/src -d dist/libs/utils --config-file=libs/utils/.swcrc",
+        "cwd": "{workspaceRoot}"
       }
     },
     "lint": {
