--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -24,9 +24,9 @@ jobs:
           node-version: "20.x"
 
       # Step 3: Install backend dependencies (root)
-    #   - name: Install backend dependencies
-        # run: npm install
-        # working-directory: .
+      #   - name: Install backend dependencies
+      # run: npm install
+      # working-directory: .
 
       # Step 4: Setup SSH for Deployment
       - name: Setup SSH
@@ -56,10 +56,14 @@ jobs:
 
             # Restore the config.env file if backup exists
             if [ -f ~/.env.bak ]; then
-              mv ~/.env.bak /.env
+              mv ~/.env.bak ~/InternVista2/.env
             fi
 
-            # Install  dependencies
+            # Enable pnpm for non-interactive shell
+            export PNPM_HOME="/home/admin/.local/share/pnpm"
+            export PATH="$PNPM_HOME:$PATH"
+                    
+            # Install and build
             pnpm install
             pnpm run build
 
