--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/compression": "^1.8.1",
     "@types/cookie-parser": "^1.4.6",
+    "@types/cors": "^2.8.19",
     "@types/express": "^4.17.21",
     "@types/file-saver": "^2.0.7",
     "@types/jest": "^29.5.11",
@@ -188,6 +189,7 @@
     "cmdk": "^0.2.0",
     "compression": "^1.8.1",
     "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "dayjs": "^1.11.10",
     "deepmerge": "^4.3.1",
     "file-saver": "^2.0.5",
