--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "scripts": {
     "dev": "nx run-many -t serve",
     "test": "nx run-many -t test",
-    "prebuild": "pnpm prisma:generate",
+    "prebuild": "pnpm messages:extract && pnpm prisma:generate",
     "build": "nx run-many -t build",
     "prestart": "pnpm prisma:migrate",
     "start": "node dist/apps/server/main",
